<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/GoogleDrive"
            android:textSize="20sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_arrow_back" />

        <Button
                android:id="@+id/btnNewFolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/newFolder" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/recycler_view_item_dialog"
            tools:layoutManager="LinearLayout"
            >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel" />

        <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/accept" />
    </LinearLayout>

</LinearLayout>
