<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fresco="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="#8c000000"
        tools:context=".fragments.GoogleDrive"
        android:orientation="vertical" >

    <androidx.cardview.widget.CardView
            android:id="@+id/driveUser"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/Base.CardView"
            android:orientation="vertical"
            tools:ignore="InvalidId" >

        <LinearLayout
                tools:ignore="UseCompoundDrawables"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

            <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/imageDrive"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="top"
                    fresco:actualImageScaleType="fitCenter"
                    fresco:placeholderImage="@drawable/googledrive" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sesionDrive"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="top"
                    android:text="@string/iniciar_sesion"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#8c000000"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>

        <TextView
                android:id="@+id/emailDrive"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:text="@string/email"
                android:gravity="center"
                android:textColor="#8c000000"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/colorPrimary"
            android:theme="@style/Base.CardView"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp" >

        <LinearLayout
                tools:ignore="UseCompoundDrawables"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/carpeta_export"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#8c000000"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingStart="5dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:textColor="#8c000000"
                        android:inputType="textUri"
                        android:text="@string/ruta"
                        android:id="@+id/txtRutaDrive"/>
                <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnRutaDrive"
                        android:background="@drawable/ic_folder"
                        android:layout_weight="90"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/btnShareDrive"
                        android:text="@string/compartir" />
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:id="@+id/btnDeleteDrive"
                        android:text="@string/deleteFolder" />
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/enlace_carpeta"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#8c000000"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:gravity="center"
                        android:paddingStart="5dp"
                        android:textColor="#8c000000"
                        android:textSize="15sp"
                        android:text="@string/enlace"
                        android:id="@+id/txtEnlaceDrive"/>
                <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnEnlaceDrive"
                        android:background="@drawable/ic_copy"
                        android:layout_weight="90"/>
            </LinearLayout>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btn_export"
                    android:text="@string/export" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>